--- a/metadata/people.yaml
+++ b/metadata/people.yaml
@@ -3,7 +3,7 @@ Leaders:
   - name:         Christina Bergmann
     email:        chbergma@gmail.com 
     website:      https://sites.google.com/site/chbergma/
-    affiliation:  Max Planck Institute for Psycholinguistics
+    affiliation:  Osnabrück University of Applied Sciences and Max Planck Institute for Psycholinguistics
     image:        /media/people/christina.jpg
     
   - name:         Sho Tsuji
